--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^3.4.0",
     "json-server": "^0.9.6",
     "json-server-reset": "^1.0.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   }
